--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,18 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
-email:
+title: HGXYN
+email: 
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 twitter_username: username
-github_username: username
-minimal_mistakes_skin: default
+github_username: hxylol
+minimal_mistakes_skin: dark
 search: true
+locale: zh-CN
+repository: hxylol/hgxyn.git
 
 # Build settings
 markdown: kramdown
