--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: HGXYN
-email: 
+title: 手離
+name: "Emond Hgxyn"
+email: 2089971698@qq.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
+  この門をくぐる者は一切の希望を捨てよ
 github_username: hxylol
 minimal_mistakes_skin: dark
 search: true
@@ -60,9 +58,9 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
+  name   : "Emond Hgxyn"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "この門をくぐる者は一切の希望を捨てよ."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
