--- a/_config.yml
+++ b/_config.yml
@@ -121,12 +121,35 @@ tag_archive:
   type: liquid
   path: /tags/
 
-# comments:
-#   provider: "giscus"
-#   giscus:
-#     repo_id              : # Shown during giscus setup at https://giscus.app
-#     category_name        : # Full text name of the category
-#     category_id          : # Shown during giscus setup at https://giscus.app
-#     discussion_term      : # "pathname" (default), "url", "title", "og:title"
-#     reactions_enabled    : # '1' for enabled (default), '0' for disabled
-#     theme                : # "light" (default), "dark", "dark_dimmed", "transparent_dark", "preferred_color_scheme"
+comments:
+  provider: "giscus"
+  giscus:
+    repo_id              : R_kgDOKp04DA # Shown during giscus setup at https://giscus.app
+    category_name        : Announcements # Full text name of the category
+    category_id          : DIC_kwDOKp04DM4Ch7kD # Shown during giscus setup at https://giscus.app
+    discussion_term      : pathname # "pathname" (default), "url", "title", "og:title"
+    reactions_enabled    : 1 # '1' for enabled (default), '0' for disabled
+    theme                : preferred_color_scheme # "light" (default), "dark", "dark_dimmed", "transparent_dark", "preferred_color_scheme"
+    strict               : 1
+    emit_metadata        : 0
+    input_position       : top
+    lang                 : zh-CN
+    loading              : lazy
+
+# <script src="https://giscus.app/client.js"
+#         data-repo="hxylol/hgxyn"
+#         data-repo-id="R_kgDOKp04DA"
+#         data-category="Announcements"
+#         data-category-id="DIC_kwDOKp04DM4Ch7kD"
+#         data-mapping="pathname"
+#         data-strict="1"
+#         data-reactions-enabled="1"
+#         data-emit-metadata="0"
+#         data-input-position="top"
+#         data-theme="preferred_color_scheme"
+#         data-lang="zh-CN"
+#         data-loading="lazy"
+#         crossorigin="anonymous"
+#         async>
+# </script>
+# https://giscus.app/zh-CN
