--- a/_config.yml
+++ b/_config.yml
@@ -130,11 +130,11 @@ comments:
     discussion_term      : pathname # "pathname" (default), "url", "title", "og:title"
     reactions_enabled    : 1 # '1' for enabled (default), '0' for disabled
     theme                : preferred_color_scheme # "light" (default), "dark", "dark_dimmed", "transparent_dark", "preferred_color_scheme"
-    strict               : 1
-    emit_metadata        : 0
-    input_position       : top
-    lang                 : zh-CN
-    loading              : lazy
+    # strict               : 1
+    # emit_metadata        : 0
+    # input_position       : top
+    # lang                 : zh-CN
+    # loading              : lazy
 
 # <script src="https://giscus.app/client.js"
 #         data-repo="hxylol/hgxyn"
