--- a/_config.yml
+++ b/_config.yml
@@ -124,12 +124,12 @@ tag_archive:
 comments:
   provider: "giscus"
   giscus:
-    repo_id              : R_kgDOKp04DA # Shown during giscus setup at https://giscus.app
-    category_name        : Announcements # Full text name of the category
-    category_id          : DIC_kwDOKp04DM4Ch7kD # Shown during giscus setup at https://giscus.app
-    discussion_term      : pathname # "pathname" (default), "url", "title", "og:title"
-    reactions_enabled    : 1 # '1' for enabled (default), '0' for disabled
-    theme                : preferred_color_scheme # "light" (default), "dark", "dark_dimmed", "transparent_dark", "preferred_color_scheme"
+    repo_id              : "R_kgDOKp04DA" # Shown during giscus setup at https://giscus.app
+    category_name        : "Announcements" # Full text name of the category
+    category_id          : "DIC_kwDOKp04DM4Ch7kD" # Shown during giscus setup at https://giscus.app
+    discussion_term      : "pathname" # "pathname" (default), "url", "title", "og:title"
+    reactions_enabled    : "1" # '1' for enabled (default), '0' for disabled
+    theme                : "preferred_color_scheme" # "light" (default), "dark", "dark_dimmed", "transparent_dark", "preferred_color_scheme"
     # strict               : 1
     # emit_metadata        : 0
     # input_position       : top
