--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: 手離
-subtitle: "<ruby>恐縮<rt>きょうしゅく</rt></ruby>、<ruby>恐縮<rt>きょうしゅく</rt></ruby><br>お<ruby>施主<rt>せしゅ</rt></ruby>へ。<ruby>小職<rt>こじょく</rt></ruby>が<ruby>丹精<rt>たんせい</rt></ruby>込めて仕上げ中。気を<ruby>揉<rt>も</rt></ruby>まず、数日ゆるりとお待ちください"
-name: "Emond Hgxyn"
+# subtitle: "<ruby>恐縮<rt>きょうしゅく</rt></ruby>、<ruby>恐縮<rt>きょうしゅく</rt></ruby><br>お<ruby>施主<rt>せしゅ</rt></ruby>へ。<ruby>小職<rt>こじょく</rt></ruby>が<ruby>丹精<rt>たんせい</rt></ruby>込めて仕上げ中。気を<ruby>揉<rt>も</rt></ruby>まず、数日ゆるりとお待ちください"
+subtitle: "恐縮、恐縮お施主へ。小職が丹精込めて仕上げ中。気を揉まず、数日ゆるりとお待ちください"
+subtitle_markdown: true
+name: "Gregory"
 email: 2089971698@qq.com
 description: >- # this means to ignore newlines until "baseurl:"
   この門をくぐる者は一切の希望を捨てよ
@@ -65,7 +67,7 @@ plugins:
 
 author:
   name   : "Emond Hgxyn"
-  avatar : "/assets/images/bio-photo.jpg"
+  avatar : "/assets/images/bio-photo.png"
   bio    : "この門をくぐる者は一切の希望を捨てよ."
   links:
     - label: "Website"
@@ -154,6 +156,6 @@ comments:
 # </script>
 # https://giscus.app/zh-CN
 
-sidebar:
-  nav:
-    - main
+# sidebar:
+#   nav:
+#     - main
